# asic-rs

asic-rs-core/src/data/: miner.rs
asic-rs-core/src/traits/: model.rs
asic-rs-firmwares/antminer/src/backends/v2020/: mod.rs
asic-rs-firmwares/antminer/src/backends/v2023_07/: mod.rs
asic-rs-firmwares/auradine/src/backends/v1/: mod.rs
asic-rs-firmwares/avalonminer/src/backends/: mod.rs  summary.rs
asic-rs-firmwares/avalonminer/src/backends/avalon_a/: mod.rs
asic-rs-firmwares/avalonminer/src/backends/avalon_q/: mod.rs
asic-rs-firmwares/avalonminer/src/test/json/: litestats_parsed.json  mod.rs  stats_empty_parsed.json
asic-rs-firmwares/bitaxe/src/backends/v2_0_0/: mod.rs
asic-rs-firmwares/bitaxe/src/backends/v2_9_0/: mod.rs
asic-rs-firmwares/epic/: Cargo.toml
asic-rs-firmwares/epic/src/: firmware.rs
asic-rs-firmwares/epic/src/backends/v1/: mod.rs
asic-rs-firmwares/futurebit/src/backends/v2/: mod.rs
asic-rs-firmwares/luxminer/src/backends/v1/: mod.rs
asic-rs-firmwares/marathon/src/backends/v1/: mod.rs
asic-rs-firmwares/nerdaxe/src/backends/v1/: mod.rs
asic-rs-firmwares/sealminer/src/backends/v2025/: mod.rs
asic-rs-firmwares/vnish/src/backends/v1_2_0/: mod.rs
asic-rs-firmwares/vnish/src/backends/v1_3_0/: mod.rs
asic-rs-makes/avalon/src/: hardware.rs  models.rs
asic-rs-makes/volcminer/src/: models.rs
python/pyasic_rs/: asic_rs.pyi
