[package]
name = "asic-rs-firmwares-epic"
version.workspace = true
edition.workspace = true
license.workspace = true
description ="ePIC firmware implementation for asic-rs"


[lints]
workspace = true

[dependencies]
asic-rs-core.workspace = true
asic-rs-makes-antminer.workspace = true
asic-rs-makes-epic.workspace = true
asic-rs-makes-volcminer.workspace = true
asic-rs-makes-whatsminer.workspace = true

async-trait.workspace = true
reqwest.workspace = true
once_cell.workspace = true
serde_json.workspace = true
semver.workspace = true
anyhow.workspace = true
macaddr.workspace = true
measurements.workspace = true
tokio.workspace = true
sha2.workspace = true
tracing.workspace = true


pyo3 = {workspace = true, optional = true}

[features]
python = ["dep:pyo3", "asic-rs-core/python"]
